Use a minimum cell height to prevent whitespace markdown cells from becoming invisible. (#14008)

--- a/src/sql/workbench/contrib/notebook/browser/cellViews/media/markdown.css
+++ b/src/sql/workbench/contrib/notebook/browser/cellViews/media/markdown.css
@@ -6,6 +6,7 @@
 .notebook-preview {
 	font-size: 14px;
 	line-height: 22px;
+	min-height: 22px;
 	word-wrap: break-word;
 }
 
